Setup mail content

--- a/app/views/post_mailer/published.html.erb
+++ b/app/views/post_mailer/published.html.erb
@@ -1,5 +1,5 @@
 <h1>Post#published</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/post_mailer/published.html.erb
+  New post <%= @post.title %> published
 </p>
