--- a/app/views/author_mailer/welcome.html.erb
+++ b/app/views/author_mailer/welcome.html.erb
@@ -1,5 +1,5 @@
-<h1>Author#welcome</h1>
+<h1>Welcome</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/author_mailer/welcome.html.erb
+  Hello, <%= @author.name %>
 </p>
